workloads/console/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: console
  labels:
    app.kubernetes.io/name: console
spec:
  selector:
    app.kubernetes.io/name: console
  ports:
    - name: http
      port: 80
      targetPort: http
